# ml-basics

./: 01 - Data Exploration.ipynb  02 - Regression.ipynb  pyproject.toml
challenges/: 02 - Real Estate Regression Challenge.ipynb  home_pred.pkl
